styles/media.css
@media(max-width:1200px) {
    h3 {
        font-size: 20px;
    }

    .basket h2 {
        font-size: 20px;
    }

    p {
        font-size: 14px;
    }

    .menuButton {
        font-size: 12px;
    }

    .cardPrice {
        min-width: 160px;
    }

    .cardImage img {
        width: 140px;
        height: 84px;
    }

    .card {
        margin: 16px 48px;
    }

    .card button {
        font-size: 14px;
    }

    .basketContent {
        font-size: 16px;
    }

    .basketAmount {
        font-size: 16px !important;
    }

    .changeAmount {
        height: 6px !important;
    }

    .headerFoodGroups {
        padding-left: calc((100vw - min(100vw, 1920px)) / 2 + 60px);
    }
}

@media(max-width:950px) {
    h3 {
        font-size: 18px;
    }

    .basket h2 {
        font-size: 18px;
    }

    p {
        font-size: 14px;
    }

    .menuButton {
        font-size: 12px;
    }

    .cardPrice {
        min-width: 150px;
    }

    .cardImage img {
        width: 112px;
        height: 67px;
    }

    .card {
        margin: 8px 30px;
    }

    .cardPrice {
        padding-left: 8px;
    }

    .basketContent {
        font-size: 14px;
    }

    .basketAmount {
        font-size: 14px !important;
    }

    .changeAmount {
        height: 5px !important;
    }

    .cardRight {
        margin: 8px;
    }

    .card button {
        font-size: 14px;
    }
}

@media(max-width:850px) {
    .card {
        flex-direction: column;
    }



    .cardImage {
        width: 100%;
        margin: 0;
        padding: 4px;
    }

    .cardImage img {
        width: 100%;
        height: 100px;
        object-fit: cover;
    }

    .cardRight {
        padding: 0 8px;
    }
}

@media(max-width:775px) {
    h3 {
        font-size: 18px;
    }

    .basket h2 {
        font-size: 18px;
    }

    h1 {
        font-size: 24px;
    }

    p {
        font-size: 14px;
    }

    .navbar-toggler:hover {
        cursor: default;
        filter: invert();
    }

    .menuButton {
        font-size: 12px;
    }

    .cardPrice {
        min-width: 130px;
    }

    .cardImage img {
        width: 112px;
        height: 67px;
    }

    .card {
        margin: 8px 30px;
    }

    .cardPrice {
        padding-left: 8px;
    }

    .basket {
        display: none;
    }

    .basketContent {
        font-size: 14px;
        width: 90vw;
        padding: 8px 24px;
    }

    .basketContentMobile {
        width: 90vw;
        padding: 8px 24px;
    }

    .basketAmount {
        font-size: 14px !important;
    }

    .changeAmount {
        height: 5px !important;
    }

    .cardRight {
        flex-direction: column;

    }

    footer {
        display: flex;
    }

    .basketWrapper {
        width: 0;
    }

    .foodGroupImage {
        height: 80px;
        width: 80px;
    }

    .headerFoodGroups {
        font-size: 28px;
        padding-left: calc((100vw - min(100vw, 1920px)) / 2 + 16px);
    }

    .foodGroupImage {
        margin-left: 16px;
    }

    .cardImage img {
        width: 100%;
        height: 100px;
    }

    .cardPrice {
        flex-direction: row;
        justify-content: space-between;
        padding-left: 0;
    }

    .contentMobile {
        display: none;
    }

    .headerMobile {
        display: none;
    }

    .footerMobile {
        display: none;
    }

    .basketMobile {
        width: 100vw;
        height: 100dvh;
        display: flex;
    }

    .content {
        width: 100vb;
    }

    .moto {
        text-align: center;
    }

    footer {
        flex-direction: column;
    }

    .impressum p:first-child {
        order: 3;
    }

    .impressum {
        flex-direction: column;
        align-items: center;
        padding: 32px;
        margin-bottom: 78px;
    }

    footer nav {
        display: flex;
        justify-content: space-between;
        background-color: #363534;
        padding: 24px 48px;
        position: fixed;
        left: 0;
        right: 0;
        bottom: 0;
        z-index: 1000;
    }

    .basketBadgeFull {
        margin-left: -10px;
        margin-top: -24px;
    }

    .basketBadgeEmpty {
        display: none;
    }

    .badgeAmount {
        position: absolute;
        margin-left: -12px;
        margin-top: -8px;
        font-size: 14px;
    }

    .closeBasket {
        visibility: visible;
        background: none !important;
        border: none;
        margin: 0 0 0 90vw;
        width: 16px !important;
        height: 16px !important;
    }

    .itemPrice{
        flex-grow: 1;
        text-align: right;
        padding-right: 16px;
    }
}

